# atlas4py

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  MANIFEST.in  README.md  check_version.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/actions/setup-build-env/: action.yml
.github/actions/verify-atlas4py/: action.yml
.github/actions/verify-atlas4py-rebuild/: action.yml
.github/workflows/: cibuildwheel.yml  editable-install.yml  main.yml  tox.yml
.github/workflows_disabled/: tox.yml
examples/: Atlas4Py-Test.ipynb  computation.cpp  example-unstructured.py  example1.py  example2.py  generated_Diffusion.hpp
src/atlas4py/: CMakeLists.txt  __init__.py  _atlas4py.cpp  _atlas4py_Config.cpp  _atlas4py_Config.hpp  _version.py
src/atlas4py/cmake/: atlas4py_add_atlas.cmake
src/atlas4py/pyvista/: __init__.py
tests/: conftest.py  test_bindings.py
